Correct the alignment for 'Copy of Highest Degree...' button
On the Licensed Independent Clinical Social Worker > License
Info step page. Needed because colons were removed which caused
non-alignment.

Issue #376 Remove colons between form labels and fields

--- a/psm-app/cms-web/WebContent/css/style.css
+++ b/psm-app/cms-web/WebContent/css/style.css
@@ -1225,6 +1225,10 @@ input.date{
   padding:0;
 }
 
+.newEnrollmentPanelButton {
+  margin-left: 7px;
+}
+
 /* tableData */
 .tableData{
   width:100%;
